--- a/config.yaml
+++ b/config.yaml
@@ -33,8 +33,8 @@ GOSATvXX:
 
 # Model
 MODEL: 
-  PRESSURE_EDGES: ''
-  LATITUDE: ''
-  LONGITUDE: ''
-  TIME: ''
+  PRESSURE_EDGES: 'Met_PEDGEDRY'
+  LATITUDE: 'lat'
+  LONGITUDE: 'lon'
+  TIME: 'time'
   DRY_AIR: ''
