--- a/config.yaml
+++ b/config.yaml
@@ -34,9 +34,9 @@ GOSATvXX:
 # Model
 MODEL: 
   LEVEL_EDGE_FILE_FORMAT: 'GEOSChem.LevelEdgeDiags.*_0000z.nc4' # 20150301
-  CH4_FILE_FORMAT: 'GEOSChem.SpeciesConc.*_0000z.nc4' #20150301
+  CONCENTRATION_FILE_FORMAT: 'GEOSChem.SpeciesConc.*_0000z.nc4' #20150301
   PRESSURE_EDGES: 'Met_PEDGE'
-  CH4_CENTERS: 'SpeciesConc_CH4'
+  CONCENTRATION_AT_PRESSURE_CENTERS: 'SpeciesConc_CH4'
   LATITUDE: 'lat'
   LONGITUDE: 'lon'
   TIME: 'time'
