Added a specialty config option for OCO2 v11.1 (Lite)
- This config option uses the field names from the OCO2 v11.1 Lite
  files. However, the specified parser (read_satellite_file) will
  not work for the raw files, which use a nested netcdf structure.
  Instead, this parser assumes that the files are preprocessed.
- I also added a QUALITY_FLAG option to the TROPOMIvxx entry. Even
  if this is entered as "none," I figured minimizing the discrepancies
  between the two types of satellite entries was beneficial.

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,7 @@ TROPOMIvXX: # version is specified for each instrument
     AVERAGING_KERNEL: 'xch4_column_averaging_kernel'
     PRIOR_PROFILE: 'ch4_profile_apriori'
     SATELLITE_COLUMN: 'xch4'
+    QUALITY_FLAG: 'none'
 
 GOSATv9_0: 
   AVERAGING_KERNEL_USES_CENTERS_OR_EDGES: 'edges'
@@ -31,6 +32,22 @@ GOSATv9_0:
     PRIOR_PROFILE: 'ch4_profile_apriori'
     SATELLITE_COLUMN: 'xch4'
     QUALITY_FLAG: 'xch4_quality_flag'
+
+OCO2_v11.1:
+  AVERAGING_KERNEL_USES_CENTERS_OR_EDGES: 'edges'
+  PARSER: 'read_satellite_file.py'
+  DATA_FIELDS:
+    N_OBS: 'sounding_id'
+    N_EDGES: 'levels'
+    PRESSURE_EDGES: 'pressure_levels'
+    PRESSURE_WEIGHT: 'pressure_weight'
+    LATITUDE: 'latitude'
+    LONGITUDE: 'longitude'
+    TIME: 'time'
+    AVERAGING_KERNEL: 'xco2_averaging_kernel'
+    PRIOR_PROFILE: 'co2_profile_apriori'
+    SATELLITE_COLUMN: 'xco2'
+    QUALITY_FLAG: 'none'
 
 # Model
 MODEL: 
