--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 # Observations
 TROPOMIvXX: # version is specified for each instrument
+  REPROCESS: '...'
   AVERAGING_KERNEL_USES_CENTERS_OR_EDGES: 'centers'
   OBS_DIR: '...'
   FILE_NAME_FORMAT: '...'
@@ -22,7 +23,8 @@ TROPOMIvXX: # version is specified for each instrument
     SATELLITE_COLUMN: 'xch4'
     QUALITY_FLAG: 'none'
 
-GOSATv9_0: 
+GOSATv9_0:
+  REPROCESS: '...'
   AVERAGING_KERNEL_USES_CENTERS_OR_EDGES: 'edges'
   OBS_DIR: '...'
   FILE_NAME_FORMAT: '...'
@@ -41,9 +43,10 @@ GOSATv9_0:
     QUALITY_FLAG: 'xch4_quality_flag'
 
 OCO2_v11.1_preprocessed:
+  REPROCESS: 'False'
   AVERAGING_KERNEL_USES_CENTERS_OR_EDGES: 'edges'
   OBS_DIR: '/home5/hnesser/CO2_inversion/data/observations/OCO-2'
-  FILE_NAME_FORMAT: 'oco2_*.nc'
+  FILE_NAME_FORMAT: 'oco2_20201*.nc'
   PARSER: 'read_OCO2_v11_1_preprocessed'
   DATA_FIELDS:
     N_OBS: 'sounding_id'
@@ -60,8 +63,8 @@ OCO2_v11.1_preprocessed:
 
 # Model
 MODEL:
-  MODEL_DIR: '/nobackup/hnesser/CO2_inv/validation_dirs/gc_4x5_47L_merra2_CO2/OutputDir'
-  SAVE_DIR: '/nobackup/hnesser/CO2_inv/validation_dirs/gc_4x5_47L_merra2_CO2/ProcessedDir'
+  MODEL_DIR: '/nobackupp27/hnesser/CO2_inv/validation_dirs/gc_4x5_47L_merra2_CO2/OutputDir'
+  SAVE_DIR: '/nobackupp27/hnesser/CO2_inv/validation_dirs/gc_4x5_47L_merra2_CO2/ProcessedDir'
   LEVEL_EDGE_FILE_FORMAT: 'GEOSChem.LevelEdgeDiags.*.nc4' # 20150301
   CONCENTRATION_FILE_FORMAT: 'GEOSChem.SpeciesConc.*.nc4' #20150301
   DATA_FIELDS:
