--- a/config_template.yaml
+++ b/config_template.yaml
@@ -1,6 +1,7 @@
 # Generic config format for a satellite that specifies the 
 # vertical grid using pressure edges.
-SATELLITE_USING_PRESSURE_EDGES: 
+SATELLITE_USING_PRESSURE_EDGES:
+  REPROCESS: 'True' or 'False'
   AVERAGING_KERNEL_USES_CENTERS_OR_EDGES: 'centers' or 'edges'
   OBS_DIR: 'location_of_data'
   FILE_NAME_FORMAT: 'file_name_format*.nc'
